# dev-portfolio-fast-api

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
app/: database.py  main.py
app/api/endpoints/: contact.py  system.py
app/api/schemas/: contact.py
app/core/: config.py  logger.py
app/middlewares/: rate_limiter.py
app/repositories/: contact_repository.py  models.py
app/services/: ai_service.py  contact_service.py  email_service.py
app/templates/: owner_email.html  user_email.html
