[project]
name = "dev-portfolio-fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "MakhmudNunu",email = "mahmud.nunu001@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "openai (>=2.43.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
